--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
       <span id="author"></span>
     </div>
 
+    <!-- Goals Section -->
     <textarea id="goals" placeholder="What are your goals today?"></textarea>
     <button onclick="saveGoals()">Save</button>
+
+    <!-- Task Manager Section -->
+    <div class="task-section">
+      <h3>Task List</h3>
+      <input type="text" id="task" placeholder="Add a new task" />
+      <button onclick="saveTasks()">Save Task</button>
+      <ul id="task-list"></ul>
+    </div>
   </div>
 
   <script src="script.js"></script>
