--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="overlay">
+    <!-- Quote Section -->
     <div class="quote-box">
       <p id="quote">Loading quote...</p>
       <span id="author"></span>
@@ -23,6 +24,13 @@
       <input type="text" id="task" placeholder="Add a new task" />
       <button onclick="saveTasks()">Save Task</button>
       <ul id="task-list"></ul>
+    </div>
+
+    <!-- Pomodoro Timer Section -->
+    <div class="timer-section">
+      <h3>Pomodoro Timer</h3>
+      <div id="timer">25:00</div>
+      <button id="start-timer">Start</button>
     </div>
   </div>
 
