--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <div class="overlay">
+    <!-- Color Picker -->
+    <div class="color-picker-section">
+      <label for="color-picker">Pick a background color:</label>
+      <input type="color" id="color-picker" />
+    </div>
+
     <!-- Quote Section -->
     <div class="quote-box">
       <p id="quote">Loading quote...</p>
