--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       <ul id="task-list"></ul>
     </div>
 
-    <!-- ⏱ Pomodoro Timer -->
     <div class="timer-section">
-      <h3>⏱ Pomodoro Timer</h3>
+      <h3>Pomodoro Timer</h3>
       <div id="timer">25:00</div>
       <button id="start-timer">Start</button>
     </div>
+    
 
   </div>
 
