--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
     </div>
 
     <!-- Pomodoro Timer Section -->
-<div class="timer-section">
-  <h3>Pomodoro Timer</h3>
-  <div class="circular-timer">
-    <svg width="160" height="160">
-      <circle cx="80" cy="80" r="70" class="bg"></circle>
-      <circle cx="80" cy="80" r="70" id="progress-circle"></circle>
-    </svg>
-    <div id="timer-text">25:00</div>
-  </div>
-  <div class="timer-buttons">
-    <button id="start-timer">Start</button>
-    <button id="pause-timer">Pause</button>
-    <button id="reset-timer">Reset</button>
-  </div>
-</div>
-
-
+    <div class="timer-section">
+      <h3>Pomodoro Timer</h3>
+      <div class="circular-timer">
+        <svg width="160" height="160">
+          <circle cx="80" cy="80" r="70" class="bg"></circle>
+          <circle cx="80" cy="80" r="70" id="progress-circle"></circle>
+        </svg>
+        <div id="timer-text">25:00</div>
+      </div>
+      <div class="timer-buttons">
+        <button id="start-timer">Start</button>
+        <button id="pause-timer">Pause</button>
+        <button id="reset-timer">Reset</button>
+      </div>
+    </div>
   </div>
 
+  <!-- Adding the Canvas Confetti Script -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
