--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>InspoBoard</title>
   <link rel="stylesheet" href="style.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<style>
+  body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #fdf6ec;
+    color: #333;
+    margin: 0;
+    padding: 20px;
+  }
+</style>
 </head>
 <body>
   <div class="overlay">
@@ -17,11 +26,9 @@
     </div>
 
     <!-- ✨ Daily Quote -->
-    <div class="quote-box">
-      <p id="quote">Loading quote...</p>
-      <span id="author"></span>
-    </div>
+    <p id="quote"></p>
 
+    
     <!-- 🎯 Goals Section -->
     <div class="task-section">
       <h3>🎯 Your Daily Goals</h3>
@@ -36,6 +43,12 @@
       <button onclick="saveTasks()">Add Task</button>
       <ul id="task-list"></ul>
     </div>
+
+   
+    <div class="container">
+      <ABEEE HIIIIIIIIII>
+    </div>
+    
 
     <!-- Pomodoro Timer Section -->
     <div class="timer-section">
