--- a/index.html
+++ b/index.html
@@ -98,19 +98,18 @@
         </div>
       </section>
       
-      <!-- Weather Widget -->
-      <section class="weather-section">
+      <!-- habit trackerr -->
+      <section class="habit-section">
         <div class="section-header">
-          <h2>Weather</h2>
-          <div class="icon"><i class="fas fa-cloud-sun"></i></div>
+          <h2>Habit Tracker</h2>
+          <div class="icon"><i class="fas fa-check-double"></i></div>
         </div>
-        <div class="weather-display">
-          <div class="weather-icon">
-            <i class="fas fa-sun"></i>
+        <div class="habit-display">
+          <div class="habit-input-container">
+            <input type="text" id="habit-input" placeholder="Add a new habit...">
+            <button id="add-habit"><i class="fas fa-plus"></i></button>
           </div>
-          <div class="weather-temp">72°F</div>
-          <div class="weather-desc">Sunny</div>
-          <div class="weather-location">New York, NY</div>
+          <ul id="habit-list"></ul>
         </div>
       </section>
       
